# 0.00.69 (54467) Jul 25, 2011
Micro tab: Changed periodic table highlight color from green to red
Micro tab: Added saturation points for CaCl2, NaNO3 and sucrose for crystal dissolving
Micro tab: Show the volume readout in exponential notation
Micro tab: Fixed: Shaker should go in front of kit panel
Micro tab: Added "Remove Sugar" and "Remove Salt" buttons for kit 1
Micro tab: Added more vertical space for the bar chart caption icons
Micro tab: Spread out the bar chart bars evenly in the x-direction
Micro tab: Added bar chart bars for all the kits
Micro tab: Center bar caption icon underneath text since there is more vertical space than horizontal
Micro tab: Added bar caption icon for sucrose
Micro tab: In the periodic table, use green instead of yellow highlighting because yellow doesn't show up well against pink
Micro tab: In the periodic table, use color squares that are the same size as the element squares
Micro tab: Created a bar chart bar for sucrose
# 0.00.68 (54426) Jul 22, 2011
Micro tab: Added a legend for the periodic table
Micro tab: Added pink background for nonmetals
Micro tab: Moved "next" and "previous" buttons next to the title and made yellow triangles like in Build a Molecule
# 0.00.67 (54416) Jul 22, 2011
Micro tab: Fixed: Ratio for CaCl2 was incorrect
Micro tab: Added units to beaker tick mark labels
Micro tab: Use a smaller font for beaker tick marks
Micro tab: Switched to arrow buttons for traversing through kits
Micro tab: Added "Solute" title to kit selection box
Micro tab: Moved the kit "previous" and "next" buttons below the kit to save horizontal space
# 0.00.66 (54407) Jul 21, 2011
Micro tab: Fixed: Beaker tick labels go offscreen
Micro tab: Fixed: Pause/playback should reset on "Reset All"
Micro tab: Fixed: Sugar molecules come out at the center of the sugar dispenser instead of the end
Micro tab: Fixed: Salts come out at the center of the shaker instead of the end
Micro tab: Added a button to the ethanol dropper