@@ -27,4 +27,4 @@ sodium = Na+
 chloride = Cl-
 ethanol = Ethanol
 calcium = Ca2+
-nitrate = NO3
+nitrate = NO3-
